--- a/contacto.html
+++ b/contacto.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Contacto - Barbería Alura</title>
-    <link rel="stylesheet" href="/reset.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
